# cask

./: .gitignore  .gitmodules  .travis.yml  BiConjugateGradient_8cpp.html  CMakeLists.txt  ConjugateGradient_8cpp.html  Converters_8hpp.html  Converters_8hpp_source.html  Dse_8cpp.html  Dse_8hpp.html  Dse_8hpp_source.html  FindMKL.cmake  Io_8hpp.html  Io_8hpp_source.html  LICENSE  Makefile  Makefile.common  Model_8hpp.html  Model_8hpp_source.html  ParallelCsrReadControl_8java.html  README.md  README_8md.html  SimpleSpmv_8hpp.html  SimpleSpmv_8hpp_source.html  SparseLinearSolvers_8cpp.html  SparseLinearSolvers_8hpp.html  SparseLinearSolvers_8hpp_source.html  SparseMatrix_8hpp.html  SparseMatrix_8hpp_source.html  SpmvDeviceInterfaceMock_8cpp.html  SpmvDeviceInterface_8cpp.html  SpmvDeviceInterface_8h.html  SpmvDeviceInterface_8h_source.html  SpmvKernel_8java.html  SpmvManager_8java.html  Spmv_8cpp.html  Spmv_8hpp.html  Spmv_8hpp_source.html  UserInput_8hpp.html  UserInput_8hpp_source.html  (+142 more)
benchmark/cg/: Makefile  intel-mkl.c
benchmark/cusp/: cg.cu
benchmark/intel-mkl/: Makefile  cg.c  makefile
benchmark/lib/: common.c  common.h  mmio.h  timer.cpp  timer.hpp
benchmark/test/: check_sol.py
ci/travis/: setup.sh
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: SparseLinearSolvers.cpp.func-sort-c.html  SparseLinearSolvers.cpp.func.html  SparseLinearSolvers.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
coverage/tests/: index-sort-f.html  index-sort-l.html  index.html  test_architecture.cpp.func-sort-c.html  test_architecture.cpp.func.html  test_architecture.cpp.gcov.html  test_spmv.cpp.func-sort-c.html  (+5 more)
docs/: BiConjugateGradient_8cpp.html  BiConjugateGradient_8cpp.js  ConjugateGradient_8cpp.html  Converters_8hpp.html  Converters_8hpp.js  Converters_8hpp_source.html  Dse_8cpp.html  Dse_8cpp.js  Dse_8hpp.html  Dse_8hpp.js  Dse_8hpp_source.html  Execution_8hpp.html  Execution_8hpp_source.html  FileUtils_8hpp.html  FileUtils_8hpp.js  FileUtils_8hpp_source.html  GeneratedImplSupport_8hpp.html  GeneratedImplSupport_8hpp_source.html  Io_8hpp.html  Io_8hpp_source.html  Model_8hpp.html  Model_8hpp_source.html  ParallelCsrReadControl_8java.html  README_8md.html  SharedLibLoader_8cpp.html  SimpleSpmv_8hpp.html  SimpleSpmv_8hpp.js  SimpleSpmv_8hpp_source.html  SparseLinearSolvers_8cpp.html  SparseLinearSolvers_8cpp.js  SparseLinearSolvers_8hpp.html  SparseLinearSolvers_8hpp_source.html  SparseMatrix_8hpp.html  SparseMatrix_8hpp.js  SparseMatrix_8hpp_source.html  SpmvDeviceInterfaceMock_8cpp.html  SpmvDeviceInterfaceMock_8cpp.js  SpmvDeviceInterface_8cpp.html  SpmvDeviceInterface_8cpp.js  SpmvDeviceInterface_8h.html  (+244 more)
experimental-data/: 1pipe_16inputs_100mhz_2048_100krows.perf.out  1pipe_16inputs_100mhz_300mhzDRAM_2048_30krows_max3_230a54.perf.out  1pipe_16inputs_100mhz_300mhzDRAM_2048_30krows_max3_e52b28.perf.out  2pipe_16inputs_100mhz_400MhzDram_2048_50krows_max3.perf.out  3pipe_16input_120mhz_666mhzDram_2048_50krows_max4_100it_SM_fix.perf.out  3pipe_8inputs_100mhz_666mhzDram_2048_70krows_max4_100it_SM_fix.perf.out
include/: Benchmark.hpp  Cask.hpp  IO.hpp  LinearSolvers.hpp  MklLayer.hpp  SparseMatrix.hpp  Utils.hpp
matrices/: conf5_4-8x8-05.html  consph.html  dense.html  dw8192.html  epb1.html  index.html  mac_econ_fwd500.html  psmigr_2.html  raefsky1.html  rma10.html  scircuit.html  t2d_q9_A_01.html  torso2.html
script/: get_matrices.py  sparse_grind.py  test.sh
scripts/: CMakeFunctions.txt  benchmark_spmv  dse_fpga16  dse_max3.sh  filter-perf-outs.sh  hwrun  hwrun_maia  hwrunner  maxbuild.py  mockrunner  render_graphs.py  simrunner  spark.py  spark.sh  spark_dfe_run.sh  test_spmv.sh  test_spmv_fpga16  test_spmv_hw  test_spmv_hw_fpga16  test_spmv_hw_fpga16_maia
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  all_7a.js  classes_64.js  classes_66.js  classes_69.js  classes_70.js  classes_72.js  classes_73.js  files_63.js  files_64.js  files_70.js  files_73.js  files_75.js  functions_5f.js  functions_61.js  functions_62.js  functions_63.js  functions_65.js  functions_66.js  functions_67.js  functions_69.js  functions_6c.js  (+24 more)
spam/: CMakeLists.txt
spam/sparse-bench/src/fpga/spmv/fpgaNaive/: CMakeLists.txt
spam/sparse-bench/src/fpga/spmv/fpgaNaive/src/: fpgaNaiveKernel.maxj
sparsegrind/: README.md  fetch.py  generate.py  grindlinalg.py  main.py  matrixio.py  precision.py  storage.py  test.py
src/: SparseLinearSolvers.cpp  StreamGridCpuCode.cpp  StreamGridKernel.maxj  StreamGridManager.maxj  main.cpp  mmio.h
src/cpu/: BenchmarkUtils.hpp  BicgStabEigen.cpp  CMakeLists.txt  CgEigen.cpp  CgMklExplicit.cpp  CgMklRci.cpp  CgMklThreeTerm.cpp  EigenUtils.hpp  PCgMklExplicit.cpp
src/cpu/lib/: common.c
src/cpu/petsc/: Makefile  configure_hpc.sh  parse_result.sh  petsc_ksp.c  run.sh
test/: CgTest.cpp  ClientTestCg.cpp  ClientTestSpmv.cpp  Io.cpp  LinearSolvers.cpp  MklLayer.cpp  SparseMatrix.cpp  TestUtils.cpp  check.py  test_architecture.cpp  test_bicg.cpp  test_cg.cpp  test_library_loader.cpp  test_main.py  test_spmv.cpp  tiny.mtx
test-benchmark/: dw8192.mtx  t2d_q9_A_01.mtx
test-matrices/: OPF_3754.mtx  test_dense_16.mtx  test_dense_32.mtx  test_dense_4.mtx  test_dense_48.mtx  test_dense_64.mtx  test_dense_8.mtx  test_empty_last_rows_small.mtx  test_large_dense.mtx  test_large_dram.mtx  test_longer_row.mtx  test_no_empty_rows.mtx  test_one_row.mtx  test_one_value_one_index_per_row.mtx  test_partition.mtx  test_small.mtx  test_some_empty_rows.mtx  test_tiny.mtx  test_tiny_odd.mtx  test_tols90.mtx  test_tsopf2.mtx  test_two_rows_2.mtx
tests/: Io.cpp  LinearSolvers.cpp  MklLayer.cpp  SparseMatrix.cpp  TestUtils.hpp  test_architecture.cpp  test_bicg.cpp  test_cg.cpp  test_dse.cpp  test_library_loader.cpp  test_solver1.cpp  test_spmv.cpp  test_utils.hpp
unit-tests/: spmv_test.cpp
(+378 files in other folders)
